# cpp-bencoding

./: .gitignore  CMakeLists.txt  README.md
doc/: CMakeLists.txt  doxygen.h  doxygen.in
include/: BDictionary.h  BInteger.h  BItem.h  BItemVisitor.h  BList.h  CMakeLists.txt  Decoder.h  Encoder.h  PrettyPrinter.h  Utils.h
sample/: CMakeLists.txt  decoder.cpp
sample/inputs/: sample1.torrent  sample2.torrent  sample3.torrent
src/: BDictionary.cpp  BInteger.cpp  BItem.cpp  BItemVisitor.cpp  BList.cpp  CMakeLists.txt  Decoder.cpp  Encoder.cpp  PrettyPrinter.cpp  Utils.cpp
tests/: BDictionaryTests.cpp  BIntegerTests.cpp  BListTests.cpp  BStringTests.cpp  CMakeLists.txt  DecoderTests.cpp  EncoderTests.cpp  PrettyPrinterTests.cpp  TestUtils.cpp  TestUtils.h  UtilsTests.cpp
